upload of readme

--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
-body {
-    margin-top: 15%;
-    background-color: lightblue;
-    font-style: tahoma;
-    color: black;
-    text-align: center;
+body{
+backgroud-color:lightblue;
+font family:tahoma
+color:red;
+text-align:center;
 }
